[gd_scene load_steps=5 format=2]

[ext_resource path="res://WordList.gd" type="Script" id=1]
[ext_resource path="res://res/Wood15.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/MainMenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Buttons/MenuButton.tscn" type="PackedScene" id=4]

[node name="WordListRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 518.612, 438.051 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 60

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "<lessonTitle>"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 720.0
margin_bottom = 818.0
rect_min_size = Vector2( 0, 700 )

[node name="ButtonAddWord" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 878.0
margin_right = 720.0
margin_bottom = 954.455
text_loc = "addWord"

[node name="ButtonDeleteLesson" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 1014.0
margin_right = 720.0
margin_bottom = 1090.45
scene_to_load = "res://Manage.tscn"
text_loc = "deleteLesson"
[connection signal="pressed" from="VBoxContainer/ButtonAddWord" to="." method="_on_ButtonAddWord_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonDeleteLesson" to="." method="_on_ButtonDeleteLesson_pressed"]
